--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <version>1.18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
